--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,48 @@
 
-/* 
+.red-light {
+    top: 46px;
+    left: 119px;
+    position: fixed;
+    background-color: #ffa2ab54;
+    width: 62px;
+    height: 61px;
+    border-radius: 50%;
+    box-shadow: rgb(235 5 5 / 73%) 0px 0px 21px 23px;
+}
+.green-light {
+    top: 193px;
+    left: 119px;
+    position: fixed;
+    background-color: #75ffab47;
+    width: 62px;
+    height: 61px;
+    border-radius: 50%;
+    box-shadow: #198754 0px 0px 21px 23px;
+}
+.yellow-light {
+    top: 120px;
+    left: 119px;
+    position: fixed;
+    background-color: #ffc10780;
+    width: 62px;
+    height: 61px;
+    border-radius: 50%;
+    box-shadow: #fece41bf 0px 0px 21px 23px;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.traffic-light {
+    display: flex;
+}
 
-*/
+
+.traffic-light img {
+    height: 300px;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-around;
+}
+
+
